# ansible-execute

./: .gitignore  .pre-commit-config.yaml  execute_config.yml  pyproject.toml  requirements.txt
ansible_execute/: cli.py  exceptions.py  executor.py  logger.py  main.py  utils.py
ansible_execute/schemas/: default_config.yml
tests/: test_cli.py  test_executor.py  test_logger.py  test_main.py  test_utils.py  test_utils_patch.py
tests/fixtures/: config_wrong_type.yml  schema_bad_yaml.yml  schema_invalid_structure.yml  schema_valid.yml
